bridge/base/0-pyxidr-capstone-project-namespace.yaml
#! 0-pyxidr-capstone-project-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: pyxidr-capstone-project
    labels:
        com.docker.compose.project: pyxidr-capstone-project
