bridge/base/optimization-deployment.yaml
#! optimization-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: optimization
    namespace: pyxidr-capstone-project
    labels:
        com.docker.compose.project: pyxidr-capstone-project
        com.docker.compose.service: optimization
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: pyxidr-capstone-project
            com.docker.compose.service: optimization
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: pyxidr-capstone-project
                com.docker.compose.service: optimization
                com.docker.compose.network.default: "true"
        spec:
            containers:
                - name: optimization
                  image: pyxidr-capstone-project-optimization
                  imagePullPolicy: IfNotPresent
                  volumeMounts:
                    - name: app-data-output
                      mountPath: /app/data/output
                    - name: root--config-gcloud
                      mountPath: /root/.config/gcloud
                      readOnly: true
            volumes:
                - name: app-data-output
                  hostPath:
                    path: /Users/eloibernier/Documents/MS-ADS/2026_Spring/Capstone_I/Repo/Pyxidr-Capstone-Project/data/output
                - name: root--config-gcloud
                  hostPath:
                    path: /Users/eloibernier/.config/gcloud
                  readOnly: true
